feat: add the transaction, accounts statement
